2008-01-08 David Moore  <dcm@acm.org>
	* SVN 530: Fix for iSight and other multi-unit cameras on Mac OS X.

2008-01-05 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 529: Update NEWS, README and AUTHORS. Release 2.0.0.

2008-01-04 David Moore  <dcm@acm.org>
	* SVN 528: Fix newlines in some example status messages

2007-12-28 Damien Douxchamps http://damien.douxchamps.net/
        * SVN 527: Update GPL/author statements

2007-12-27 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 526: fix compilation issues with the previous change.
	* SVN 525: Change the name of two utilitary functions that were very
	           confusing:
		   - dc1394_get_color_coding_depth >
		         dc1394_get_color_coding_data_depth
		   - dc1394_get_bits_per_pixel >
		         dc1394_get_color_coding_bit_size
		   Version numbers bumped to 22,0,0.

2007-12-26 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 524: Prevent a camera from appearing twice when two interface
	           cards linked to the same computer are bridged.
        * SVN 523: Go around a firmware problem in the iSight (v1.0.3): two
	           vendor leaves are present but there's no model leaf, even
		   though the second 'vendor' leaf is clearly the model leaf.
	
2007-12-17 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 522: Write a very basic, one-line description of (almost) every
	           function.
	* SVN 521: little cleanup in the example programs
	* SVN 520: comments don't end with "\n", so that custom handlers can
	           choose what to do (use "\r", for instance). Instead, the
		   "\n" is added in the default handlers. Some vararg
		   comments have also been also reinstated.

2007-12-16 David Moore  <dcm@acm.org>
	* SVN 519: Convert tabs to spaces and delete trailing whitespace.

2007-12-14 Damien Douxchamps http://damien.douxchamps.net/
	* SVN 518: Change indentation from 2 to 4 spaces 
	* SVN 517: Framework for the Doxygen comments. 
	* SVN 516: Version 2.0.0-rc9
